--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        'fruit-primary': '#F85559',
 
 
                     }
@@ -45,7 +46,7 @@
 
     <header>
         <nav>
-            <div class="navbar  bg-[#F85559] rounded-full my-8 text-white">
+            <div class="navbar  bg-fruit-primary rounded-full my-8 text-white">
                 <div class="navbar-start absolute">
                   <div class="dropdown">
                     <label tabindex="0" class="btn btn-ghost btn-circle lg:hidden">
@@ -81,6 +82,17 @@
                 </div>
               </div>
         </nav>
+        <!-- slider or carousel -->
+        <div class="hero h-[450px] " style="background-image: url('images/banner1.png');">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-center text-neutral-content ">
+              <div class="max-w-md text-white">
+                <h1 class="mb-5 text-5xl font-extrabold">Exotic tastes at your doorstep</h1>
+                <p class="mb-5 text-base font-medium">We supply highly quality organic products</p>
+                <button class="btn bg-fruit-primary  border-none text-white">Shop Now</button>
+              </div>
+            </div>
+          </div>
 
     </header>
 
