--- a/index.html
+++ b/index.html
@@ -83,15 +83,96 @@
               </div>
         </nav>
         <!-- slider or carousel -->
-        <div class="hero h-[450px] " style="background-image: url('images/banner1.png');">
-            <div class="hero-overlay bg-opacity-60"></div>
-            <div class="hero-content text-center text-neutral-content ">
-              <div class="max-w-md text-white">
-                <h1 class="mb-5 text-5xl font-extrabold">Exotic tastes at your doorstep</h1>
-                <p class="mb-5 text-base font-medium">We supply highly quality organic products</p>
-                <button class="btn bg-fruit-primary  border-none text-white">Shop Now</button>
+        <div class="carousel w-full">
+            <div id="slide1" class="carousel-item relative w-full">
+                <div class="hero h-[450px] " style="background-image: url('images/banner1.png');">
+                    <div class="hero-overlay bg-opacity-60"></div>
+                    <div class="hero-content text-center text-neutral-content ">
+                      <div class="max-w-md text-white">
+                        <h1 class="mb-5 text-5xl font-extrabold">Exotic tastes at your doorstep</h1>
+                        <p class="mb-5 text-base font-medium">We supply highly quality organic products</p>
+                        <button class="btn bg-fruit-primary  border-none text-white">Shop Now</button>
+                      </div>
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle">❮</a> 
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide2" class="carousel-item relative w-full">
+                <div class="hero h-[450px] " style="background-image: url('images/banner2.png');">
+                    <div class="hero-overlay bg-opacity-60"></div>
+                    <div class="hero-content text-center text-neutral-content ">
+                      <div class="max-w-md text-white">
+                        <h1 class="mb-5 text-5xl font-extrabold">Exotic tastes at your doorstep</h1>
+                        <p class="mb-5 text-base font-medium">We supply highly quality organic products</p>
+                        <button class="btn bg-fruit-primary  border-none text-white">Shop Now</button>
+                      </div>
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle">❮</a> 
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide3" class="carousel-item relative w-full">
+                <div class="hero h-[450px] " style="background-image: url('images/banner3.png');">
+                    <div class="hero-overlay bg-opacity-60"></div>
+                    <div class="hero-content text-center text-neutral-content ">
+                      <div class="max-w-md text-white">
+                        <h1 class="mb-5 text-5xl font-extrabold">Exotic tastes at your doorstep</h1>
+                        <p class="mb-5 text-base font-medium">We supply highly quality organic products</p>
+                        <button class="btn bg-fruit-primary  border-none text-white">Shop Now</button>
+                      </div>
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle">❮</a> 
+                <a href="#slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide4" class="carousel-item relative w-full">
+                <div class="hero h-[450px] " style="background-image: url('images/banner4.png');">
+                    <div class="hero-overlay bg-opacity-60"></div>
+                    <div class="hero-content text-center text-neutral-content ">
+                      <div class="max-w-md text-white">
+                        <h1 class="mb-5 text-5xl font-extrabold">Exotic tastes at your doorstep</h1>
+                        <p class=" text-base font-medium">We supply highly quality organic products</p>
+                        <button class="btn bg-fruit-primary  border-none text-white">Shop Now</button>
+                      </div>
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle">❮</a> 
+                <a href="#slide1" class="btn btn-circle">❯</a>
               </div>
             </div>
+          </div>
+
+          <!-- banner bonus -->
+          <div class="grid grid-cols-5 bg-white w-[1000px] pt-7 pb-8 gap-16 rounded-md absolute top-[520px] ml-24 shadow-xl">
+              <div>
+                <img src="images/fruit1.png" alt="">
+                <p>Blueberry</p>
+
+              </div>
+              <div>
+                <img src="images/fruit2.png" alt="">
+                <p>Orange</p>
+              </div>
+              <div>
+                <img src="images/fruit3.png" alt="">
+                <p>Mango</p>
+              </div>
+              <div>
+                <img src="images/fruit4.png" alt="">
+                <p>Strawberry</p>
+              </div>
+              <div>
+                <img src="images/fruit5.png" alt="">
+                <p>pomegranate</p>
+              </div>
           </div>
 
     </header>
