--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
         <!-- meet the team section -->
         <section class="my-[230px]">
-            <div class="hero h-[550px]" style="background-image: url(images/banner1.png);">
+            <div class="hero md:h-[900px] lg:h-[550px]" style="background-image: url(images/banner1.png);">
                 <div class="hero-overlay bg-opacity-70"></div>
                 <div class="hero-content text-center text-white">
                     <div class="max-w">
@@ -200,30 +200,30 @@
                             of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
 
                         <!-- info -->
-                        <div class="flex  gap-24">
+                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  gap-24">
                             <div>
-                                <img class="mb-5" src="images/member1.png" alt="">
+                                <div class="flex justify-center"><img class="mb-5 " src="images/member1.png" alt=""></div>
                                 <h2 class="text-xl font-bold">Awlad Hossain</h2>
                                 <p class="text-base font-medium mb-2">Fruits Expert</p>
                                 <div class="flex justify-center gap-2 text-fruit-primary text-base"><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-linkedin"></i></div>
 
                             </div>
                             <div>
-                                <img class="mb-5" src="images/member2.png" alt="">
+                                <div class="flex justify-center"><img class="mb-5 " src="images/member2.png" alt=""></div>
                                 <h2 class="text-xl font-bold">Safia Chowdhury</h2>
                                 <p class="text-base font-medium mb-2">Fruits Expert</p>
                                 <div class="flex justify-center gap-2 text-fruit-primary text-base"><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-linkedin"></i></div>
 
                             </div>
                             <div>
-                                <img class="mb-5" src="images/member3.png" alt="">
+                                <div class="flex justify-center"><img class="mb-5 " src="images/member3.png" alt=""></div>
                                 <h2 class="text-xl font-bold">Rokib Hossain</h2>
                                 <p class="text-base font-medium mb-2">Fruits Expert</p>
                                 <div class="flex justify-center gap-2 text-fruit-primary text-base"><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-linkedin"></i></div>
 
                             </div>
                             <div>
-                                <img class="mb-5" src="images/member4.png" alt="">
+                                <div class="flex justify-center"><img class="mb-5 " src="images/member4.png" alt=""></div>
                                 <h2 class="text-xl font-bold">Chaity</h2>
                                 <p class="text-base font-medium mb-2">Fruits Expert</p>
                                 <div class="flex justify-center gap-2 text-fruit-primary text-base"><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-linkedin"></i></div>
