--- a/index.html
+++ b/index.html
@@ -160,31 +160,33 @@
         </div>
 
         <!-- banner bonus -->
-        <div
-            class="hidden md:flex justify-around items-center pt-7 pb-7 bg-white w-[1000px]  rounded-md absolute top-[530px] ml-24 shadow-xl">
-            <div>
-                <img src="images/fruit1.png" alt="">
-                <p class="text-center">Blueberry</p>
+        <div class="flex justify-center">
+            <div
+                class="hidden md:flex justify-around items-center pt-7 pb-7 bg-white w-[1000px]  rounded-md absolute top-[530px] shadow-xl">
+                <div>
+                    <img src="images/fruit1.png" alt="">
+                    <p class="text-center">Blueberry</p>
 
+                </div>
+                <div>
+                    <img src="images/fruit2.png" alt="">
+                    <p class="text-center">Orange</p>
+                </div>
+                <div>
+                    <img src="images/fruit3.png" alt="">
+                    <p class="text-center">Mango</p>
+                </div>
+                <div>
+                    <img src="images/fruit4.png" alt="">
+                    <p class="text-center">Strawberry</p>
+                </div>
+                <div>
+                    <img src="images/fruit5.png" alt="">
+                    <p class="text-center">pomegranate</p>
+                </div>
             </div>
-            <div>
-                <img src="images/fruit2.png" alt="">
-                <p class="text-center">Orange</p>
-            </div>
-            <div>
-                <img src="images/fruit3.png" alt="">
-                <p class="text-center">Mango</p>
-            </div>
-            <div>
-                <img src="images/fruit4.png" alt="">
-                <p class="text-center">Strawberry</p>
-            </div>
-            <div>
-                <img src="images/fruit5.png" alt="">
-                <p class="text-center">pomegranate</p>
-            </div>
+
         </div>
-
     </header>
 
     <main class="md:container md:mx-auto">
@@ -196,40 +198,53 @@
                 <div class="hero-content text-center text-white">
                     <div class="max-w">
                         <h1 class="mb-5 text-5xl font-extrabold">Meet the team section</h1>
-                        <p class="mb-20 text-sm font-medium">Contrary to popular belief, is not simply random text. It has roots in a piece
+                        <p class="mb-20 text-sm font-medium">Contrary to popular belief, is not simply random text. It
+                            has roots in a piece
                             of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
 
                         <!-- info -->
                         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  gap-24">
                             <div>
-                                <div class="flex justify-center"><img class="mb-5 " src="images/member1.png" alt=""></div>
+                                <div class="flex justify-center"><img class="mb-5 " src="images/member1.png" alt="">
+                                </div>
                                 <h2 class="text-xl font-bold">Awlad Hossain</h2>
                                 <p class="text-base font-medium mb-2">Fruits Expert</p>
-                                <div class="flex justify-center gap-2 text-fruit-primary text-base"><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-linkedin"></i></div>
+                                <div class="flex justify-center gap-2 text-fruit-primary text-base"><i
+                                        class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i
+                                        class="fa-brands fa-linkedin"></i></div>
 
                             </div>
                             <div>
-                                <div class="flex justify-center"><img class="mb-5 " src="images/member2.png" alt=""></div>
+                                <div class="flex justify-center"><img class="mb-5 " src="images/member2.png" alt="">
+                                </div>
                                 <h2 class="text-xl font-bold">Safia Chowdhury</h2>
                                 <p class="text-base font-medium mb-2">Fruits Expert</p>
-                                <div class="flex justify-center gap-2 text-fruit-primary text-base"><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-linkedin"></i></div>
+                                <div class="flex justify-center gap-2 text-fruit-primary text-base"><i
+                                        class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i
+                                        class="fa-brands fa-linkedin"></i></div>
 
                             </div>
                             <div>
-                                <div class="flex justify-center"><img class="mb-5 " src="images/member3.png" alt=""></div>
+                                <div class="flex justify-center"><img class="mb-5 " src="images/member3.png" alt="">
+                                </div>
                                 <h2 class="text-xl font-bold">Rokib Hossain</h2>
                                 <p class="text-base font-medium mb-2">Fruits Expert</p>
-                                <div class="flex justify-center gap-2 text-fruit-primary text-base"><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-linkedin"></i></div>
+                                <div class="flex justify-center gap-2 text-fruit-primary text-base"><i
+                                        class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i
+                                        class="fa-brands fa-linkedin"></i></div>
 
                             </div>
                             <div>
-                                <div class="flex justify-center"><img class="mb-5 " src="images/member4.png" alt=""></div>
+                                <div class="flex justify-center"><img class="mb-5 " src="images/member4.png" alt="">
+                                </div>
                                 <h2 class="text-xl font-bold">Chaity</h2>
                                 <p class="text-base font-medium mb-2">Fruits Expert</p>
-                                <div class="flex justify-center gap-2 text-fruit-primary text-base"><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-linkedin"></i></div>
+                                <div class="flex justify-center gap-2 text-fruit-primary text-base"><i
+                                        class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i
+                                        class="fa-brands fa-linkedin"></i></div>
 
                             </div>
-                            
+
 
                         </div>
                     </div>
