--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     </style>
 </head>
 
-<body class="font-lato lg:mx-20">
+<body class="font-lato ">
 
-    <header>
+    <header class="lg:mx-20">
         <nav>
             <div class="navbar bg-white md:bg-fruit-primary rounded-full my-8 text-black lg:text-white">
                 <div class="navbar-start absolute">
@@ -192,7 +192,7 @@
     <main class="md:container md:mx-auto">
 
         <!-- meet the team section -->
-        <section class="my-[230px]">
+        <section class="my-[230px] lg:mx-20">
             <div class="hero md:h-[900px] lg:h-[550px]" style="background-image: url(images/banner1.png);">
                 <div class="hero-overlay bg-opacity-70"></div>
                 <div class="hero-content text-center text-white">
@@ -258,9 +258,24 @@
 
     </main>
 
-    <footer>
-
-    </footer>
+    <footer class="footer footer-center p-10 bg-black text-white rounded ">
+        <div class="flex justify-center">
+            <img src="images/logo.png" alt="">
+            <h1 class="font-bold text-4xl">Fruit Burst</h1>
+        </div>
+        <div class="grid grid-cols-3 md:grid-cols-3 lg:grid-cols-6 gap-5 text-base font-medium">
+          <a class="link link-hover">Home</a> 
+          <a class="link link-hover">About us</a> 
+          <a class="link link-hover">Shop</a> 
+          <a class="link link-hover">All Fruits</a> 
+          <a class="link link-hover">Support</a>
+          <a class="link link-hover">My Account</a>
+        </div> 
+         
+        <div class="grid grid-cols-3 md:grid-cols-3 lg:grid-cols-6 text-3xl gap-8">
+            <i class="fa-brands fa-twitter"></i><i class="fa-brands fa-facebook" style="color: blue;"></i><i class="fa-brands fa-youtube" style="color: #ff0000;"></i><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i><i class="fa-brands fa-instagram" style="color: #ffffff;"></i><i class="fa-brands fa-apple" style="color: #ffffff;"></i>
+        </div>
+      </footer>
 
 </body>
 
