updated bonus section

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <!-- banner bonus -->
         <div class="flex justify-center">
             <div
-                class="hidden md:flex justify-around items-center pt-7 pb-7 bg-white w-[1000px]  rounded-md absolute top-[530px] shadow-xl">
+                class="hidden md:flex justify-around items-center pt-7 pb-7 bg-white md:w-[700px] lg:w-[1000px]  rounded-md absolute top-[530px] shadow-xl">
                 <div>
                     <img src="images/fruit1.png" alt="">
                     <p class="text-center">Blueberry</p>
