added info part of deal section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     colors: {
                         clifford: '#da373d',
                         'fruit-primary': '#F85559',
+                        'fruit-sec' : ' #12121299',
 
 
                     }
@@ -162,10 +163,10 @@
         <!-- banner bonus -->
         <div class="flex justify-center">
             <div
-                class="hidden md:flex justify-around items-center pt-7 pb-7 bg-white md:w-[700px] lg:w-[1000px]  rounded-md absolute top-[530px] shadow-xl">
+                class="hidden md:flex justify-around items-center pt-7 pb-7 bg-white md:w-[700px] lg:w-[1000px]  rounded-md absolute top-[530px] shadow-xl text-fruit-sec font-medium text-base">
                 <div>
                     <img src="images/fruit1.png" alt="">
-                    <p class="text-center">Blueberry</p>
+                    <p class="text-center ">Blueberry</p>
 
                 </div>
                 <div>
@@ -182,7 +183,7 @@
                 </div>
                 <div>
                     <img src="images/fruit5.png" alt="">
-                    <p class="text-center">pomegranate</p>
+                    <p class="text-center text-fruit-sec">pomegranate</p>
                 </div>
             </div>
 
@@ -190,6 +191,47 @@
     </header>
 
     <main class="md:container md:mx-auto">
+
+    <!-- Deal section -->
+    <section class="my-[230px] lg:mx-20">
+        <!-- info part -->
+        <div class="flex">
+            <div class="flex-1">
+                <h1 class="font-extrabold text-4xl">Deal of the day</h1>
+                <p class="text-sm font-medium text-fruit-sec">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            
+                <div class="flex gap-7">
+                    <div>
+                        <h1 class="font-extrabold text-4xl">29</h1>
+                        <p class="text-sm font-medium text-fruit-sec">Days</p>
+                    </div>
+                    <div class="pt-2">
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                    <div>
+                        <h1 class="font-extrabold text-4xl">15</h1>
+                        <p class="text-sm font-medium text-fruit-sec">Hours</p>
+                    </div>
+                    <div class="pt-2">
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                    <div>
+                        <h1 class="font-extrabold text-4xl">25</h1>
+                        <p class="text-sm font-medium text-fruit-sec">Minutes</p>
+                    </div>
+                    <div class="pt-2">
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                    <div>
+                        <h1 class="font-extrabold text-4xl">08</h1>
+                        <p class="text-sm font-medium text-fruit-sec">Second</p>
+                    </div>
+                </div>
+            
+        </div>
+
+    </section>
 
         <!-- meet the team section -->
         <section class="my-[230px] lg:mx-20">
