did responsive for tablet

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                 <div>
                     <div>
                         <h1 class="text-center lg:text-start pl-8 text-xl font-extrabold">Dedicated Team</h1>
-                        <div class="flex flex-col md:flex-row lg:flex-row items-center gap-3">
+                        <div class="flex flex-col md:flex-col lg:flex-row items-center gap-3">
                             <div><i class="fa-solid fa-user text-2xl" style="color: #c0c0c0;"></i></div>
                             <hr class="border-black w-20 ">
                         </div>
@@ -683,7 +683,7 @@
                     </div>
                     <div>
                         <h1 class="pl-8 text-xl font-extrabold text-center lg:text-start">Fresh is Best</h1>
-                        <div class="flex flex-col md:flex-row lg:flex-row  items-center gap-3">
+                        <div class="flex flex-col md:flex-col lg:flex-row  items-center gap-3">
                             <div><i class="fa-solid fa-heart text-2xl" style="color: #c0c0c0;"></i></div>
                             <hr class="border-black w-20">
                         </div>
@@ -693,7 +693,7 @@
                     </div>
                     <div>
                         <h1 class="pl-8 text-xl font-extrabold text-center lg:text-start">Gift Certificates</h1>
-                        <div class="flex flex-col md:flex-row lg:flex-row  items-center gap-3">
+                        <div class="flex flex-col md:flex-col lg:flex-row  items-center gap-3">
                             <div><i class="fa-solid fa-thumbs-up text-2xl" style="color: #c0c0c0;"></i></div>
                             <hr class="border-black w-20">
                         </div>
@@ -708,7 +708,7 @@
                 <div class="text-right">
                     <div>
                         <h1 class="pr-8 text-xl font-extrabold text-center lg:text-end">Integrated Supplier</h1>
-                        <div class="flex  flex-col md:flex-row lg:flex-row-reverse   items-center gap-3">
+                        <div class="flex  flex-col md:flex-col lg:flex-row-reverse   items-center gap-3">
                             <div><i class="fa-solid fa-user text-2xl text-right" style="color: #c0c0c0;"></i></div>
                             <hr class="border-black w-20 text-right">
                         </div>
@@ -718,7 +718,7 @@
                     </div>
                     <div>
                         <h1 class="pr-8 text-xl font-extrabold text-center lg:text-end">Sustainable Practice</h1>
-                        <div class="flex  flex-col md:flex-row   lg:flex-row-reverse items-center gap-3">
+                        <div class="flex  flex-col md:flex-col   lg:flex-row-reverse items-center gap-3">
                             <div><i class="fa-solid fa-heart text-2xl" style="color: #c0c0c0;"></i></div>
                             <hr class="border-black w-20">
                         </div>
@@ -728,7 +728,7 @@
                     </div>
                     <div>
                         <h1 class="pr-8 text-xl font-extrabold text-center lg:text-end">The Benefits Only</h1>
-                        <div class="flex  flex-col md:flex-row lg:flex-row-reverse  flex-row-reverse items-center gap-3">
+                        <div class="flex  flex-col md:flex-col lg:flex-row-reverse  flex-row-reverse items-center gap-3">
                             <div><i class="fa-solid fa-thumbs-up text-2xl" style="color: #c0c0c0;"></i></div>
                             <hr class="border-black w-20">
                         </div>
