--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
                             <p class="text-sm text-fruit-sec font-medium">Apples</p>
                             <!-- ratings -->
-                            <div class="rating rating-lg rating-half ">
+                            <div class="rating rating-xl rating-half ">
                                 <input type="radio" name="rating-10" class="rating-hidden" />
                                 <input type="radio" name="rating-10"
                                     class="bg-fruit-primary mask mask-star-2 mask-half-1" />
@@ -281,7 +281,7 @@
                             </div>
                             <!-- details and Modals -->
                             <!-- Open the modal using ID.showModal() method -->
-                            <button class="btn bg-white text-fruit-primary"
+                            <button class="btn bg-white text-fruit-primary border-none"
                                 onclick="my_modal_1.showModal()">Details</button>
                             <dialog id="my_modal_1" class="modal">
                                 <form method="dialog" class="modal-box w-6/12 max-w-xl ">
@@ -293,7 +293,7 @@
                                         for
                                         you to pick the most <br> amazing and fresh fruits.</p>
                                     <!-- ratings part -->
-                                    <div class="rating rating-lg rating-half ">
+                                    <div class="rating rating-xl rating-half ">
                                         <input type="radio" name="rating-10" class="rating-hidden" />
                                         <input type="radio" name="rating-10"
                                             class="bg-fruit-primary mask mask-star-2 mask-half-1" />
@@ -341,7 +341,7 @@
 
                             <p class="text-sm text-fruit-sec font-medium">Orange</p>
                             <!-- ratings -->
-                            <div class="rating rating-lg rating-half ">
+                            <div class="rating rating-xl rating-half ">
                                 <input type="radio" name="rating-10" class="rating-hidden" />
                                 <input type="radio" name="rating-10"
                                     class="bg-fruit-primary mask mask-star-2 mask-half-1" />
@@ -366,19 +366,19 @@
                             </div>
                             <!-- details and Modals -->
                             <!-- Open the modal using ID.showModal() method -->
-                            <button class="btn bg-white text-fruit-primary"
+                            <button class="btn bg-white text-fruit-primary border-none"
                                 onclick="my_modal_2.showModal()">Details</button>
                             <dialog id="my_modal_2" class="modal">
                                 <form method="dialog" class="modal-box w-6/12 max-w-xl ">
                                     <div class="flex justify-center">
-                                        <img class="w-[200px] h-[200px]" src="images/fruit8.png" alt="">
+                                        <img class="w-[200px] h-[200px]" src="images/fruit7.png" alt="">
                                     </div>
                                     <h3 class="font-extrabold text-4xl">Orange</h3>
                                     <p class="py-4 text-sm font-medium text-fruit-sec">Professional employees are there
                                         for
                                         you to pick the most <br> amazing and fresh fruits.</p>
                                     <!-- ratings part -->
-                                    <div class="rating rating-lg rating-half ">
+                                    <div class="rating rating-xl rating-half ">
                                         <input type="radio" name="rating-10" class="rating-hidden" />
                                         <input type="radio" name="rating-10"
                                             class="bg-fruit-primary mask mask-star-2 mask-half-1" />
@@ -426,7 +426,7 @@
 
                             <p class="text-sm text-fruit-sec font-medium">Red Dragons</p>
                             <!-- ratings -->
-                            <div class="rating rating-lg rating-half ">
+                            <div class="rating rating-xl rating-half ">
                                 <input type="radio" name="rating-10" class="rating-hidden" />
                                 <input type="radio" name="rating-10"
                                     class="bg-fruit-primary mask mask-star-2 mask-half-1" />
@@ -451,7 +451,7 @@
                             </div>
                             <!-- details and Modals -->
                             <!-- Open the modal using ID.showModal() method -->
-                            <button class="btn bg-white text-fruit-primary"
+                            <button class="btn bg-white text-fruit-primary border-none"
                                 onclick="my_modal_3.showModal()">Details</button>
                             <dialog id="my_modal_3" class="modal">
                                 <form method="dialog" class="modal-box w-6/12 max-w-xl ">
@@ -463,7 +463,7 @@
                                         for
                                         you to pick the most <br> amazing and fresh fruits.</p>
                                     <!-- ratings part -->
-                                    <div class="rating rating-lg rating-half ">
+                                    <div class="rating rating-xl rating-half ">
                                         <input type="radio" name="rating-10" class="rating-hidden" />
                                         <input type="radio" name="rating-10"
                                             class="bg-fruit-primary mask mask-star-2 mask-half-1" />
@@ -511,7 +511,7 @@
 
                             <p class="text-sm text-fruit-sec font-medium">Banana</p>
                             <!-- ratings -->
-                            <div class="rating rating-lg rating-half ">
+                            <div class="rating rating-xl rating-half ">
                                 <input type="radio" name="rating-10" class="rating-hidden" />
                                 <input type="radio" name="rating-10"
                                     class="bg-fruit-primary mask mask-star-2 mask-half-1" />
@@ -536,7 +536,7 @@
                             </div>
                             <!-- details and Modals -->
                             <!-- Open the modal using ID.showModal() method -->
-                            <button class="btn bg-white text-fruit-primary"
+                            <button class="btn bg-white text-fruit-primary border-none"
                                 onclick="my_modal_4.showModal()">Details</button>
                             <dialog id="my_modal_4" class="modal">
                                 <form method="dialog" class="modal-box w-6/12 max-w-xl ">
@@ -548,7 +548,7 @@
                                         for
                                         you to pick the most <br> amazing and fresh fruits.</p>
                                     <!-- ratings part -->
-                                    <div class="rating rating-lg rating-half ">
+                                    <div class="rating rating-xl rating-half ">
                                         <input type="radio" name="rating-10" class="rating-hidden" />
                                         <input type="radio" name="rating-10"
                                             class="bg-fruit-primary mask mask-star-2 mask-half-1" />
