--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="hidden md:hidden lg:flex">
                     <div class=" relative flex items-center ">
                         <input type="text" placeholder="Search here"
-                            class="input border-none input-primary rounded-full w-80" />
+                            class="input border-none rounded-full w-80" />
                         <i class="fa-solid fa-magnifying-glass absolute ml-72 text-fruit-sec "></i>
 
                     </div>
@@ -284,7 +284,7 @@
                             <button class="btn bg-white text-fruit-primary border-none"
                                 onclick="my_modal_1.showModal()">Details</button>
                             <dialog id="my_modal_1" class="modal">
-                                <form method="dialog" class="modal-box w-6/12 max-w-xl ">
+                                <form method="dialog" class="modal-box w-6/12 max-w-xl">
                                     <div class="flex justify-center">
                                         <img class="w-[200px] h-[200px]" src="images/fruit6.png" alt="">
                                     </div>
